# AudioIntrinsics

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  envsetup.sh
.github/ISSUE_TEMPLATE/: bug_report.md
include/: AudioIntrinsics.h
include/common/: Audio.h  AudioAlias.h  AudioOperation.h  AudioType.h
include/memory/: AudioBuffer.h
include/status/: Error.h  Return.h  Status.h
intrinsics/: CMakeLists.txt
test/: CMakeLists.txt
test/memorytest/: AudioBufferTest.cpp  CMakeLists.txt
test/statustest/: CMakeLists.txt  ErrorTest.cpp  StatusTest.cpp
test/utilstest/: AudioAttributeTest.cpp  AudioChannelMaskTest.cpp  AudioFormatTest.cpp  CMakeLists.txt
tools/template/: commit-template
